@@ -8,6 +8,7 @@ import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.test.context.ActiveProfiles;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.fpl.model.CaseData;
 import uk.gov.hmcts.reform.fpl.model.Child;
 import uk.gov.hmcts.reform.fpl.model.ChildParty;
 
@@ -15,22 +16,35 @@ import java.time.LocalDate;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.callbackRequest;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(ChildController.class)
 @OverrideAutoConfiguration(enabled = true)
-class ChildControllerMidEventTest extends AbstractControllerTest {
+class ChildControllerTest extends AbstractControllerTest {
+
+    ChildControllerTest() {
+        super("enter-children");
+    }
 
     private static final String ERROR_MESSAGE = "Date of birth cannot be in the future";
 
-    ChildControllerMidEventTest() {
-        super("enter-children");
+    @Test
+    void aboutToStartShouldPrepopulateChildrenDataWhenNoChildExists() {
+        CaseDetails caseDetails = CaseDetails.builder()
+            .data(ImmutableMap.of("data", "some data"))
+            .build();
+
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToStartEvent(caseDetails);
+
+        assertThat(callbackResponse.getData()).containsKey("children1");
     }
 
     @Test
     void shouldReturnDateOfBirthErrorWhenFutureDateOfBirth() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .data(Map.of("children1", ImmutableList.of(
+            .id(12345L)
+            .data(ImmutableMap.of("children1", ImmutableList.of(
                 createChildrenElement(LocalDate.now().plusDays(1)))))
             .build();
 
@@ -42,7 +56,8 @@ class ChildControllerMidEventTest extends AbstractControllerTest {
     @Test
     void shouldReturnDateOfBirthErrorWhenThereIsMultipleChildren() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .data(Map.of(
+            .id(12345L)
+            .data(ImmutableMap.of(
                 "children1", ImmutableList.of(
                     createChildrenElement(LocalDate.now().plusDays(1)),
                     createChildrenElement(LocalDate.now().plusDays(1))
@@ -57,7 +72,8 @@ class ChildControllerMidEventTest extends AbstractControllerTest {
     @Test
     void shouldReturnNoDateOfBirthErrorWhenValidDateOfBirth() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .data(Map.of("children1", ImmutableList.of(
+            .id(12345L)
+            .data(ImmutableMap.of("children1", ImmutableList.of(
                 createChildrenElement(LocalDate.now().minusDays(1)))))
             .build();
 
@@ -69,12 +85,25 @@ class ChildControllerMidEventTest extends AbstractControllerTest {
     @Test
     void shouldReturnNoDateOfBirthErrorsWhenCaseDataIsEmpty() {
         CaseDetails caseDetails = CaseDetails.builder()
-            .data(Map.of())
+            .id(12345L)
+            .data(ImmutableMap.of())
             .build();
 
         AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(caseDetails);
 
         assertThat(callbackResponse.getErrors()).isEmpty();
+    }
+
+    @Test
+    void aboutToSubmitShouldAddConfidentialChildrenToCaseDataWhenConfidentialChildrenExist() throws Exception {
+        //first child in callbackRequest() has yes value for detailsHidden.
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(callbackRequest());
+        CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
+        CaseData initialData = mapper.convertValue(callbackRequest().getCaseDetails().getData(), CaseData.class);
+
+        assertThat(caseData.getConfidentialChildren()).containsOnly(initialData.getAllChildren().get(0));
+        assertThat(caseData.getChildren1().get(0).getValue().getParty().address).isNull();
+        assertThat(caseData.getChildren1().get(1).getValue().getParty().address).isNotNull();
     }
 
     private Map<String, Object> createChildrenElement(LocalDate dateOfBirth) {
